# shox

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  tasks.py
cmake/: Config.cmake.in
include/: Platform.hpp
include/shox/: Keyboard.hpp  RingBuffer.hpp
install/: CMakeLists.txt
tests/: CMakeLists.txt  Platform.test.cpp  RingBuffer.test.cpp
